<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <TextView
                    style="@style/display_text_style"
                    android:text="@string/app_name"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/display_text_style"
                    android:text="@string/email"/>

            <TextView
                    style="@style/display_text_style"
                    android:text="@string/email_address"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/display_text_style"
                    android:text="@string/weibo"/>

            <TextView
                    style="@style/display_text_style"
                    android:text="@string/weibo_name"/>

        </TableRow>

    </TableLayout>

    <ListView
            android:id="@+id/lv_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</LinearLayout>