<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="5dp"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:textSize="20sp"
                style="@style/display_text_style"
                android:text="@string/app_name" />

        </LinearLayout>

        <TableRow
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/display_text_style"
                android:text="@string/email" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/display_text_style" />

            <TextView
                style="@style/display_text_style"
                android:text="@string/email_address" />

        </TableRow>

        <TableRow
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/display_text_style"
                android:text="@string/weibo" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/display_text_style" />

            <TextView
                style="@style/display_text_style"
                android:text="@string/weibo_name" />

        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/drawer_items"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</LinearLayout>